# dsa_hybrid_editor

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
chars/: Gardesoldat.json  Goblin (Rotpelz).json  Goblin Scharführer.json  Maru (Wutechse) (Beidhändig Kunchomer).json  Maru (Wutechse) (Zweihandaxt).json  Meisterfechter Rahjoprast Rosenkron.json  Menschenfresser (Oger).json  Normale Stadtwache (Hellebarde).json  Normale Stadtwache (Schwert Schild).json  Normaler Söldner.json  Ork Stammeskrieger (Gruufhai).json  Räuberhauptmann Alrikson.json  Wirtshausschläger (Faust).json  Wirtshausschläger (Improvisationskünstler).json  Wirtshausschläger (Imrpovisationskünstler).json  Wirtshausschläger (Kampfkünstler).json  Wirtshausschläger (Stuhlbein).json
src/: app.rs  character.rs  gradient.rs  io.rs  main.rs  simulator.rs  util.rs  widgets.rs
src/app/: character.rs  dnd.rs  gradient.rs  group.rs  io.rs  widgets.rs
src/app/character/: armor.rs  attributes.rs  bennies.rs  edges.rs  name.rs  passive_stats.rs  skills.rs  weapon.rs
src/character/: armor.rs  attributes.rs  bennies.rs  edges.rs  name.rs  passive_stats.rs  skills.rs  weapon.rs
src/simulator/: arena.rs  cards.rs  fight_report.rs  fighter.rs  rand.rs  roller.rs
