[package]
name = "dsa_hybrid_editor"
version = "0.1.0"
authors = ["Pantos <pantos+github@akk.org>"]
edition = "2024"
publish = false

#
# dependencies
#

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",           # workaround to update to 0.31, should be default
    "wayland",       # workaround to update to 0.31, should be default
] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
better-panic = "0.3.0"

strum = "0.27"
strum_macros = "0.27"

crossbeam = "0.8.4"
dashmap = "6.1.0"
fxhash = "0.2.1"
rand = "0.9.0"
rand_xoshiro = "0.7.0"

#
# web
#

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"

#
# profiles
#

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

#
# lints
#

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# exceptions
match_same_arms = "allow"
verbose_bit_mask = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
needless_continue = "allow"

#
# docs
#

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "wasm32-unknown-unknown",
    "x86_64-pc-windows-gnu",
]
